--- a/gb/24/11/6/n14365797.md
+++ b/gb/24/11/6/n14365797.md
@@ -13,41 +13,38 @@
 <p>不过，报导表示，由于富士康满手辉达服务器订单，苹果目前也要求中国联想集团（Lenovo Group）及其子公司LCFC协助一部分的服务器设计工作，并仰赖台厂环旭电子等小型供应商提供生产服务。</p>
 <p>责任编辑：吕美琪</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/21/4/26/n12907230.md#1">苹果公司未来5年将在卡尔弗城雇工3千</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/21/7/21/n13103431.md#1">苹果公司延长员工居家办公的时间</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/3/24/n13668922.md#1">苹果公司游说纽约车管厅 推动数字驾照</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/8/17/n13804248.md#1">苹果公司将执行严格的返回办公室计划</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/12/28/n13893202.md#1">声称面临歧视和死亡威胁 女职员起诉苹果公司</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/12/30/n13894993.md#1">苹果公司被告手表血氧仪存“种族偏见”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/2/8/n13925295.md#1">苹果公司租用桑尼维尔办公大楼 并进行改造</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/2/15/n13930178.md#1">苹果公司联合创始人 警告ChatGPT可能犯"可怕错误"</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/4/9/n13969094.md#1">苹果公司创意师：神韵演出之美超乎想像</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/4/10/n13969883.md#1">苹果公司发布新操作系统修补安全漏洞</a></li>
-<hr>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/6/12/n3284139.md#1">沉粹典丽 风骨逆劲──唐初四大书法家之 虞世南</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/10/7/n3394783.md#1">后世圭臬 唐楷第一书家欧阳询</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/16/7/2/n8059920.md#1">【千古英雄人物】唐太宗(22) 墨海椽笔</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/12/n9133922.md#1">【书法漫谈】书法家的对话：放松与放纵</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163925.md#1">唐代书法漫谈（1）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163955.md#1">唐代书法漫谈（2）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163956.md#1">唐代书法漫谈（3）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/19/1/16/n10979954.md#1">仁心执法 让死刑判起来更难的唐太宗</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/22/1/16/n13507994.md#1">【书法漫谈】中国书法的神性特点</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/4/11/n11180163.md#1" target="_blank">【征文】章阁：中国古代专制吗（下）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/14/n11384505.md#1" target="_blank">欧洲名校毕业的一代骄子 难忘童年之痛</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/13/n10711496.md#1" target="_blank">共产暴政录：喊错口号导致六千人被杀</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/29/n10882266.md#1" target="_blank">中共绑架法轮功学员 美国务院：停止迫害</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/30/n14360732.md#1">墨西哥南部丛林发现失落的玛雅古城</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/17/n14352322.md#1">【古道人生】父亲嫌女婿家变穷悔婚 女儿守婚约得好结果</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/28/n14359422.md#1">为何为逝世的家属“做七”? “七”是个吉数？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/1/n14362702.md#1">【未解之谜】CIA禁书（下）新一次文明更迭倒计时？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/21/n14354767.md#1">捍卫战士：与年轻的自己对话（2/3）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/31/n14361778.md#1">【全球新闻】投票倒计时 华盛顿架护栏严阵以待</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/5/n14364380.md#1">【时事金扫描】朝兵上战场就懞圈 遭俄军误击</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/31/n14361779.md#1">【晚间新闻】缔造历史 美7800万人提前投票</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/30/n14361055.md#1">美国人最喜爱的13款车 丰田车囊括前五名</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/4/n14363885.md#1">印尼火山喷发 喷出爆炸性熔岩柱 10人死亡</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/2/n14363139.md#1">一文看懂 美大选各州投票结束和开票时间</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/4/n14364365.md#1">因大战小粉红爆红 英钢琴家卡瓦纳或游台湾</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/4/n14363848.md#1">新《神鬼奇航》明年制作 没有强尼戴普</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/4/n14363981.md#1">50岁李奥纳多自认不再年轻 想要当爸爸</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/4/n14364327.md#1">景甜回应外界传闻 动手术素颜病榻照曝光</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/3/n14363473.md#1">子瑜低调现身新北 偕母应援Elkie庄锭欣开唱</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/3/n14363370.md#1">这一物可清理马克杯里的茶渍 效果超乎想像</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/3/n14363289.md#1">2024世界最美丽女性榜单出炉 美的标准是什么？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/5/n14364594.md#1">砧板会窝藏细菌 用两种天然物品可有效清理</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/29/n14360331.md#1">精神内耗毁健康 专家教你五种方法克服</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/2/n14363035.md#1">中医推荐10分钟足部按摩操 助你摆脱水肿困扰</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540909.md#1">【未解之谜】“午夜之锤”早已被预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545641.md#1">【马克时空】服务一甲子 F-5告别台湾天空</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14545002.md#1">【直播】庆美国独立日 华府燃放烟火</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545198.md#1">【车评】越野猛兽  2025 Toyota Tundra TRD Rally</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544420.md#1">罗马仕被曝停工停产 数十万充电宝无钱退款</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544361.md#1">德媒：中国电动车市场泡沫即将破裂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545646.md#1">吴谨言复出遇阻？传大陆演员35岁起禁演古偶剧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545630.md#1">陈思诚新片票房惨淡 上映首日9小时仅卖395万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14545808.md#1">在正确时间帮植物浇水 避免引发真菌疾病</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542657.md#1">香蕉的颜色和斑点透露了什么</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541355.md#1">你应该知道扁豆的所有健康益处</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/11/6/n14365797.htm">传苹果接洽富士康 要求在台生产AI服务器</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/11/6/n14365797.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
